remove conflicting margin; fix clipping issue with post-body

--- a/project/static/css/puzzleinfo.css
+++ b/project/static/css/puzzleinfo.css
@@ -76,9 +76,7 @@ body {
 }
 
 .post-body {
-    height: 70px;
     background-color: transparent;
-    margin-top: 5px;
     margin-bottom: 5px;
 }
 
